style.css
/* ... */
form.search-form input:focus {
    outline: none;
}

#recent-texts-search-input {
    max-width: 250px;
}

#saved-texts-search-input {
    max-width: 170px;
}

.section-heading {
    width: auto;
    display: flex;
    gap: 10px;
    align-items: center;
    font-size: 17px;
    font-weight: 600;
    padding: 15px;
}

.section-heading i {
    color: blueviolet;
}

.middle-container > * {
    border: 1px solid black;
}

.settings-container {
    grid-column: 1/2;
    grid-row: 1/-1;
    width: 250px;
}

.recents-container {
    grid-column: 2/3;
    grid-row: 1/2;
    overflow: hidden;
    padding-bottom: 50px;
    background-image: url(assets/big_light_logo.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    min-height: 0;
}

.type-form-container {
    height: 200px;
    grid-column: 2/3;
    grid-row: 2/3;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
}

.saved-container {
    grid-column: 3/4;
    grid-row: 1/2;
    display: flex;
    flex-direction: column;
    overflow: auto;
    min-height: 0;
    /* max-width: 100%; */
}

.saved-container .section-heading-group .search-form {
    flex: 2 1 150px !important;   
}

.saved-texts-list {
    background-color: #f3f4f6;
    border-radius: 8px;
    height: 100%;
    padding: 15px;
    display: flex;
    flex-direction: column;
    gap: 18px;
    overflow: auto;
}

.quick-phrases-container {
    grid-column: 3/4;
    grid-row: 2/3;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.quick-phrases {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 7px;
    padding: 0px 15px 15px 15px;
    height: 100%;
    overflow: auto;
}

.quick-phrase-text {
    background-color: #f3f4f6;
    max-height: 60px;
    max-width: 100%;
    overflow: auto;
    scrollbar-width: 0px;
    padding: 5px;
    border-radius: 10px;
    color: rgb(101, 101, 101);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 13px;
    cursor: pointer;
    scrollbar-width: none;  
    -ms-overflow-style: none;  

}
.your-element::-webkit-scrollbar {
  display: none;
}

.quick-phrase-text:hover {
    background-color: #e1e0e0;
    color: black;
}

.talk-form {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto;
    /* margin-top: 10px; */
    gap: 7px;
    padding: 0px 15px 15px 15px;
}

#talk-input {
    overflow: auto;
    padding: 10px 15px 15px 15px;
    box-sizing: border-box;
    border: none;
    font-size: 14px;
    resize: none;
    background-color: #f4f7fe;
    border-radius: 10px;
    font-family: var(--font);
    margin-bottom: 10px;
}

#talk-input:focus {
    outline: none;
}

.actions {
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr;
    height: 33px;
    gap: 10px;
}

.actions button {
    color: white;
    border: none;
    border-radius: 8px;
    display: flex;
    gap: 7px;
    justify-content: center;
    align-items: center;
}

.actions button:hover {
    background-color: rgb(82, 82, 82);
}

#save-button {
    background-color: var(--header-color1);
}

#save-button:hover {
    background-color: #3d31e3;
}

#speak-button {
    background-color: var(--quick-start-button-bg);
}

#speak-button:hover {
    background-color: blueviolet;
}

.settings-list {
    padding: 10px 20px 20px 20px;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.settings-input-title {
    font-size: 14px;
}

.voice-form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#voiceSelect {
    box-sizing: border-box;
    height: 30px;
    width: auto;
    border-radius: 7px;
    padding: 0px 10px;
}

.voice-select:focus {
    outline: none;
}

.slider {
    display: flex;
    flex-direction: column;
    gap: 7px;
}

.slider .top-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.slider input#pitch {
    width: 100%;
}

input[type="range"] {
  -webkit-appearance: none; 
  width: 100%;
  height: 6px;
  background: #ddd;
  border-radius: 3px;
  outline: none;
}

input[type="range"]{
  background: #e2e8f0;
  color: var(--header-color1)
}

.slider-value {
    color: #4640c1;
    background-color: #e0e7ff;
    font-size: 13px;
    border-radius: 7px;
    padding: 5px;
    width: 25px;
    height: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.bottom-row {
    display: flex;
    justify-content: space-between;
    font-size: 10px;
    color: gray;
}

.recents {
    box-sizing: border-box;
    padding: 15px 15px 20px 15px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow:auto;
    height: 100%;
    max-width: 100%;
    /* background-color: #f3f4f6; */
    border-radius: 8px;
}

.recent-talk {
    display: flex;
    align-items: center;
    gap: 5px;
    transition: all 0.2s ease-in;
}

.recent-talk:hover {
    transform: translateX(5px);
}

.recent-talk-text {
    background: linear-gradient(165deg, var(--header-color1), var(--header-color2));
    color: white;
    font-size: 15px;
    padding: 7px 20px;
    border-radius: 12px;
    border-top-left-radius: 0px;
    cursor: pointer;
}

.saved-text-wrapper {
    display: grid;
    grid-template-columns: auto 1fr auto;
    grid-template-rows: 1fr;
    gap: 7px;
    transition: all 0.2s ease-in;
}

.saved-text-wrapper:hover {
    transform: translateX(5px);
}

.play-wrapper i {
    font-size: 18px;
}

.saved-main-wrapper {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 1fr;
    border: 1px solid gray;
    background-color: var(--quick-start-button-bg);
    color: white;
    padding: 5px 10px 10px 10px;
    border-radius: 12px;
    border-top-left-radius: 0px;
    gap: 8px;
    /* width: max-content; */
}

.saved-text {
    font-size: 14px;
}
/* ... */

